# norn

./: README.md  TODO  pyproject.toml
norn/: cmd.py  events.py  flags.py  test.py  util.py
norn.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_cwet.py
